--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
+# Step 1: Build the Docker image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest', '.']
 
+# Step 2: Push the Docker image to Google Container Registry (GCR)
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest']
 
+# Step 3: Deploy the Docker image to Google Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'bash'
   args:
@@ -15,6 +18,32 @@ steps:
       --platform managed \
       --region us-west2 \
       --allow-unauthenticated
+
+# Step 4: Retrieve the Cloud Run service URL
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Get Service URL'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    SERVICE_URL=$(gcloud run services describe fastapi-python312-app \
+      --platform managed \
+      --region us-west2 \
+      --format 'value(status.url)')
+    echo "Service URL: $SERVICE_URL"
+    echo "SERVICE_URL=$SERVICE_URL" >> /workspace/service_url.txt
+
+# Step 5: Set the service URL as an environment variable
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    source /workspace/service_url.txt
+    gcloud run services update fastapi-python312-app \
+      --region us-west2 \
+      --platform managed \
+      --update-env-vars BASE_URL=$SERVICE_URL
 
 images:
 - 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest'
