servers added at last

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,49 +1,34 @@
 steps:
-# Step 1: Build the Docker image
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest', '.']
+  # Step 1: Build the Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest', '.']
 
-# Step 2: Push the Docker image to Google Container Registry (GCR)
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest']
+  # Step 2: Push the Docker image to Google Container Registry (GCR)
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest']
 
-# Step 3: Deploy the Docker image to Google Cloud Run
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    gcloud run deploy fastapi-python312-app \
-      --image gcr.io/$PROJECT_ID/fastapi-python312-app:latest \
-      --platform managed \
-      --region us-west2 \
-      --allow-unauthenticated
+  # Step 3: Deploy the Docker image to Google Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - |
+      gcloud run deploy fastapi-python312-app \
+        --image gcr.io/$PROJECT_ID/fastapi-python312-app:latest \
+        --platform managed \
+        --region us-west2 \
+        --allow-unauthenticated
 
-# Step 4: Retrieve the Cloud Run service URL
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  id: 'Get Service URL'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    SERVICE_URL=$(gcloud run services describe fastapi-python312-app \
-      --platform managed \
-      --region us-west2 \
-      --format 'value(status.url)')
-    echo "Service URL: $SERVICE_URL"
-    echo "SERVICE_URL=$SERVICE_URL" >> /workspace/service_url.txt
-
-# Step 5: Set the service URL as an environment variable
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    source /workspace/service_url.txt
-    gcloud run services update fastapi-python312-app \
-      --region us-west2 \
-      --platform managed \
-      --update-env-vars BASE_URL=$SERVICE_URL
+  # Step 4: Update the environment variable using the canonical service URL directly
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+    - '-c'
+    - |
+      gcloud run services update fastapi-python312-app \
+        --platform managed \
+        --region us-west2 \
+        --update-env-vars BASE_URL=$(gcloud run services describe fastapi-python312-app --platform managed --region us-west2 --format="value(metadata.annotations['run.googleapis.com/urls'])" | sed 's/\[//g' | sed 's/\]//g' | cut -d ',' -f 1 | sed 's/"//g')
 
 images:
 - 'gcr.io/$PROJECT_ID/fastapi-python312-app:latest'
